# fprime-fppm

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  pyproject.toml  pyptoject.toml  setup.py
docs/: CLI.md  ConfigObjects.md  Quickstart-dev.md  Quickstart-user.md  README.md  Registries.md
src/fppm/: USING.py
src/fppm/cli/: __main__.py  config_hooks.py  router.py  setup_cli.py  utils.py
src/fppm/cli/commands/: config.py  init.py  install.py  new.py  registries.py  remove.py
src/fppm/templates/cookiecutter-package/: cookiecutter.json
src/fppm/templates/cookiecutter-package-yml/: cookiecutter.json
src/fppm/templates/cookiecutter-package-yml/{{cookiecutter.package_name}}/: package.yml
src/fppm/templates/cookiecutter-package/hooks/: pre_gen_project.py
src/fppm/templates/cookiecutter-package/{{cookiecutter.package_name}}/: CMakeLists.txt  README.md  library.cmake  package.yaml  package.yml
src/fppm/templates/cookiecutter-package/{{cookiecutter.package_name}}/docs/: pdd.md
src/fppm/templates/cookiecutter-project-yaml/: cookiecutter.json
src/fppm/templates/cookiecutter-project-yaml/TMP_{{cookiecutter.project_name}}/: project.yaml
src/fppm/templates/cookiecutter-project-yaml/hooks/: pre_gen_project.py
test/: README.md  fppm-cli.py
test/static/: broken-registry.yaml  working-registry.yaml
